--- a/public/login.html
+++ b/public/login.html
@@ -5,10 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prod.AI – Login</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet" />
   
   <style>
-    body { font-family: 'Rajdhani', sans-serif; }
     .container {
       max-width: 400px;
       padding: 2rem;
@@ -44,54 +42,27 @@
       margin-top: 1rem;
       flex-wrap: wrap;
     }
-    .cta-button {
-      display: inline-block;
-      padding: 1.1rem 3rem;
-      font-size: 1.1rem;
-      font-weight: 700;
-      letter-spacing: 2px;
-      text-decoration: none;
+    .btn-plus {
+      background: linear-gradient(to right, #9a00ff, #5f00ff);
       color: #ffffff;
-      background: linear-gradient(180deg, rgba(0,255,255,0.15), rgba(255,0,255,0.15)) padding-box,
-                  linear-gradient(180deg, #00ffff, #ff00ff) border-box;
-      border: 2px solid transparent;
-      border-radius: 50px;
-      position: relative;
-      overflow: hidden;
-      transition: all 0.3s ease;
-      transform-style: preserve-3d;
-      animation: fade-in 1s ease-out 0.5s both;
+      padding: 10px 20px;
+      border-radius: 10px;
+      font-weight: bold;
+      text-decoration: none;
+      box-shadow: 0 0 10px rgba(159, 0, 255, 0.6);
+      transition: transform 0.2s, box-shadow 0.2s;
+      border: none;
       min-width: 140px;
+      font-size: 1rem;
       cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
       margin-bottom: 0;
-      background-origin: border-box;
-      background-clip: padding-box, border-box;
     }
-    .cta-button::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: -100%;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(90deg, transparent, #00ffff, transparent);
-      transition: left 0.5s ease;
-    }
-    .cta-button:hover {
-      transform: translateY(-5px) rotateX(-10deg);
-      box-shadow: 0 10px 30px rgba(0, 255, 255, 0.5), inset 0 0 20px rgba(0, 255, 255, 0.2);
-      border-color: #ff00ff;
-      text-shadow: 0 0 10px #00ffff;
-    }
-    .cta-button:hover::before {
-      left: 100%;
-    }
-    @keyframes fade-in {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+    .btn-plus:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 15px rgba(159, 0, 255, 0.8);
     }
     .error-message {
       background: rgba(255,0,0,0.2);
@@ -141,8 +112,8 @@
     <div id="recaptcha-container"></div>
 
     <div class="button-group">
-      <button class="cta-button" id="loginBtn">Entrar</button>
-      <button class="cta-button" id="signUpBtn">Cadastrar</button>
+      <button class="btn-plus" id="loginBtn">Entrar</button>
+      <button class="btn-plus" id="signUpBtn">Cadastrar</button>
     </div>
 
     <div style="text-align:center; margin-top: 14px; margin-bottom: 4px;">
@@ -159,7 +130,7 @@
   </div>
 
   <div style="display: flex; justify-content: center; margin-top: 1rem;">
-  <button class="cta-button" id="confirmCodeBtn">Confirmar código</button>
+  <button class="btn-plus" id="confirmCodeBtn">Confirmar código</button>
 </div>
 
 
