--- a/public/entrevista-final.html
+++ b/public/entrevista-final.html
@@ -6,29 +6,12 @@
   <title>Perfil Concluído – Prod.AI</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-    .final-container {
-      max-width: 500px;
-      margin: 4rem auto;
-      text-align: center;
-      padding: 2rem 1.5rem;
-      background: rgba(10,10,25,0.8);
-      border-radius: 16px;
-      box-shadow: 0 0 20px rgba(147, 51, 234, 0.4);
-    }
-    .btn-group {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      margin-top: 1.5rem;
-    }
-  </style>
 </head>
 <body>
   <div class="particles"></div>
   <div class="final-container fade-in">
-    <h1 class="logo" style="margin-bottom:0.5rem;">Perfil técnico concluído!</h1>
-    <p class="subtitle" style="margin-bottom:1.5rem;">Quer respostas personalizadas para o seu nível, estilo e DAW?</p>
+    <h1 class="logo" style="margin-bottom:1rem;">Perfil técnico concluído!</h1>
+    <p class="subtitle" style="margin-bottom:2rem;">Obrigado por responder! Agora o Prod.AI está pronto para oferecer respostas personalizadas para sua jornada musical.</p>
     <p style="margin-bottom:1rem; color:#9333ea; font-weight:600; font-size:1.1rem;">Utilize a versão Plus:</p>
     <ul style="text-align:left; margin:0 auto; max-width:320px; color:#9333ea;">
       <li>Respostas adaptadas ao seu perfil</li>
