--- a/public/login.html
+++ b/public/login.html
@@ -5,36 +5,114 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prod.AI – Login</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700;900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <style>
+    body {
+      background: radial-gradient(ellipse at top, #0f0f23 0%, #050510 100%);
+      font-family: 'Space Grotesk', sans-serif;
+    }
+
+    body::before {
+      background:
+        radial-gradient(circle at 20% 20%, rgba(120, 119, 198, 0.3) 0%, transparent 50%),
+        radial-gradient(circle at 80% 80%, rgba(255, 119, 198, 0.3) 0%, transparent 50%);
+      animation: backgroundShift 10s ease-in-out infinite;
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
+    .particles {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .particle {
+      position: absolute;
+      width: 4px;
+      height: 4px;
+      background: linear-gradient(45deg, #3b82f6, #a855f7);
+      border-radius: 50%;
+      animation: float 6s ease-in-out infinite;
+    }
+
+    .login-card {
+      background: rgba(15, 15, 35, 0.9);
+      backdrop-filter: blur(20px);
+      border-radius: 24px;
+      padding: 2.5rem 2rem;
+      border: 1px solid rgba(147, 51, 234, 0.3);
+      box-shadow:
+        0 25px 50px rgba(0, 0, 0, 0.5),
+        0 0 50px rgba(147, 51, 234, 0.1);
+    }
+
+    .logo {
+      font-family: 'Orbitron', monospace;
+      font-size: 3rem;
+      font-weight: 900;
+      background: linear-gradient(90deg, #3b82f6, #a855f7);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: logoGlow 2s ease-in-out infinite alternate;
+    }
+
+    .input-group input {
+      background: rgba(10, 10, 25, 0.8);
+      border: 2px solid rgba(147, 51, 234, 0.3);
+      border-radius: 16px;
+      padding: 1.4rem 1.5rem;
+      font-size: 1.1rem;
+      color: #fff;
+      backdrop-filter: blur(10px);
+    }
+
+    .input-group input:focus {
+      border-color: #a855f7;
+      box-shadow:
+        0 0 0 4px rgba(168, 85, 247, 0.2),
+        0 8px 25px rgba(168, 85, 247, 0.15);
+      transform: translateY(-2px);
+    }
+
+    .btn-plus {
+      background: linear-gradient(135deg, #9a00ff, #5f00ff);
+      border-radius: 16px;
+      padding: 0.75rem 1.5rem;
+      box-shadow: 0 8px 25px rgba(159, 0, 255, 0.3);
+      position: relative;
+      overflow: hidden;
+    }
+
+    .btn-plus:hover {
+      transform: translateY(-3px) scale(1.02);
+      box-shadow: 0 15px 35px rgba(159, 0, 255, 0.4);
+    }
+
     .container {
-      max-width: 400px;
+      max-width: 500px;
       padding: 2rem;
       margin: 4rem auto;
       text-align: center;
     }
+
     .subtitle {
-      color: rgba(255,255,255,0.7);
+      color: rgba(255, 255, 255, 0.7);
       margin-bottom: 1.5rem;
     }
+
     .input-group {
       margin-bottom: 1rem;
     }
-    .input-group input {
-      width: 100%;
-      padding: 0.9rem 1rem;
-      border: 2px solid rgba(147, 51, 234,0.3);
-      border-radius: 12px;
-      background: rgba(10,10,25,0.8);
-      color: #fff;
-      font-size: 1rem;
-      outline: none;
-      transition: all 0.3s;
-    }
-    .input-group input:focus {
-      border-color: #9333ea;
-      box-shadow: 0 0 0 3px rgba(147,51,234,0.2);
-    }
+
     .button-group {
       display: flex;
       gap: 0.75rem;
@@ -42,30 +120,9 @@
       margin-top: 1rem;
       flex-wrap: wrap;
     }
-    .btn-plus {
-      background: linear-gradient(to right, #9a00ff, #5f00ff);
-      color: #ffffff;
-      padding: 10px 20px;
-      border-radius: 10px;
-      font-weight: bold;
-      text-decoration: none;
-      box-shadow: 0 0 10px rgba(159, 0, 255, 0.6);
-      transition: transform 0.2s, box-shadow 0.2s;
-      border: none;
-      min-width: 140px;
-      font-size: 1rem;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 0;
-    }
-    .btn-plus:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 15px rgba(159, 0, 255, 0.8);
-    }
+
     .error-message {
-      background: rgba(255,0,0,0.2);
+      background: rgba(255, 0, 0, 0.2);
       color: #ff6961;
       padding: 0.75rem;
       border-radius: 8px;
@@ -74,28 +131,65 @@
       font-weight: 600;
       text-align: center;
     }
+
     .error-message[style*="display: block"] {
       display: block !important;
     }
+
     #sms-section {
       display: none;
       margin-top: 1.5rem;
     }
+
     #sms-section p {
-      color: rgba(255,255,255,0.7);
+      color: rgba(255, 255, 255, 0.7);
       margin-bottom: 0.5rem;
       font-size: 0.9rem;
       line-height: 1.3;
+    }
+    @media (max-width: 480px) {
+      .container {
+        max-width: 100%;
+        padding: 1rem;
+        margin: 2rem auto;
+      }
+      .login-card {
+        padding: 2rem 1.25rem;
+      }
+      .input-group input {
+        padding: 1.2rem 1rem;
+        font-size: 1rem;
+      }
+      .button-group {
+        flex-direction: column;
+      }
+      .btn-plus {
+        width: 100%;
+        padding: 0.75rem 1rem;
+      }
     }
   </style>
 </head>
 
 <body>
-  <div class="particles"></div>
+  <div class="particles">
+    <div class="particle"></div>
+    <div class="particle"></div>
+    <div class="particle"></div>
+    <div class="particle"></div>
+    <div class="particle"></div>
+    <div class="particle"></div>
+    <div class="particle"></div>
+    <div class="particle"></div>
+    <div class="particle"></div>
+    <div class="particle"></div>
+    <div class="particle"></div>
+  </div>
 
   <div class="container fade-in">
-    <h1 class="logo">Prod.AI</h1>
-    <p class="subtitle">Acesse sua conta</p>
+    <div class="login-card">
+      <h1 class="logo">Prod.AI</h1>
+      <p class="subtitle">Acesse sua conta</p>
 
     <div id="error-message" class="error-message"></div>
 
@@ -133,6 +227,9 @@
   <button class="btn-plus" id="confirmCodeBtn">Confirmar código</button>
 </div>
 
+      </div> <!-- #sms-section -->
+    </div> <!-- .login-card -->
+  </div> <!-- .container -->
 
   <!-- Scripts do Firebase e app -->
   <script src="https://www.gstatic.com/firebasejs/10.3.1/firebase-app-compat.js"></script>
