--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,9 @@
           <a href="planos.html" class="btn-plus">Assinar versão Plus</a>
         </div>
         <div class="footer-center">
-          <p class="instagram-text"><span class="plus-label">PLUS</span></p>
+          <p class="instagram-text" id="footerCenterText">
+            Siga no Instagram: <a href="https://instagram.com/djcorreaoriginal" target="_blank">@djcorreaoriginal</a>
+          </p>
         </div>
         <div class="footer-right">
           <button class="btn-logout" id="logoutBtn">Sair</button>
