--- a/public/gerenciar.html
+++ b/public/gerenciar.html
@@ -37,19 +37,19 @@
             position: relative;
         }
 
-        /* Fundo animado com partículas */
+        /* Fundo animado com partículas melhorado */
         .background-particles {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: -10%;
+            left: -10%;
+            width: 120%;
+            height: 120%;
             z-index: -1;
-            background: radial-gradient(circle at 25% 25%, var(--neon-blue) 0%, transparent 50%),
-                        radial-gradient(circle at 75% 75%, var(--neon-purple) 0%, transparent 50%),
-                        radial-gradient(circle at 50% 50%, var(--neon-green) 0%, transparent 70%);
-            opacity: 0.1;
-            animation: backgroundPulse 8s ease-in-out infinite;
+            background: radial-gradient(circle at 20% 20%, var(--neon-blue) 0%, transparent 60%),
+                        radial-gradient(circle at 80% 80%, var(--neon-purple) 0%, transparent 60%),
+                        radial-gradient(circle at 50% 60%, var(--neon-green) 0%, transparent 80%);
+            opacity: 0.05;
+            animation: backgroundPulse 12s ease-in-out infinite;
         }
 
         .particles {
@@ -69,8 +69,18 @@
         }
 
         @keyframes backgroundPulse {
-            0%, 100% { opacity: 0.1; }
-            50% { opacity: 0.3; }
+            0%, 100% { 
+                opacity: 0.04; 
+                transform: scale(1) rotate(0deg);
+            }
+            33% { 
+                opacity: 0.08; 
+                transform: scale(1.02) rotate(1deg);
+            }
+            66% { 
+                opacity: 0.06; 
+                transform: scale(0.98) rotate(-1deg);
+            }
         }
 
         @keyframes float {
