--- a/public/login.html
+++ b/public/login.html
@@ -99,10 +99,18 @@
     }
 
     .container {
-      max-width: 600px;
+      max-width: 550px;
       padding: 2rem;
       margin: 4rem auto;
       text-align: center;
+      width: 90%;
+    }
+
+    @media (max-width: 480px) {
+      .container {
+        margin: 2rem auto;
+        width: 95%;
+      }
     }
 
     .subtitle {
