--- a/public/login.html
+++ b/public/login.html
@@ -8,8 +8,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700;900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <style>
-    body {
+    html, body {
+      height: 100%;
       background: radial-gradient(ellipse at top, #0f0f23 0%, #050510 100%);
+    }
+
+    body {
       font-family: 'Space Grotesk', sans-serif;
     }
 
